<resources>
    <string name="app_name">FLEXIART</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Flexiart Company</string>
    <string name="nav_header_subtitle">info@flexi-art.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About</string>
    <string name="menu_services">Services</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_works">Works</string>
    <string name="menu_Pricing">Pricing</string>
    <string name="menu_contact">Contact</string>
</resources>