<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_blog"
            android:title="@string/menu_blog" />
        <item
            android:id="@+id/nav_works"
            android:icon="@drawable/ic_works"
            android:title="@string/menu_works" />
        <item
            android:id="@+id/nav_pricing"
            android:icon="@drawable/ic_pricing"
            android:title="@string/menu_Pricing" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact" />
    </group>
</menu>